# cpp-skeleton-headonly

./: CMakeLists.txt  README.md
src/: main.cpp
test/: CMakeLists.txt  test_main.cpp
